[CE-8]: Adding JACOCO agent while startig maanger and delegate in FT (#10263)
* [CE-8]: Adding JACOCO agent while startig maanger and delegate in FT