@@ -1,10 +1,12 @@
 package io.harness.testframework.framework;
 
+import static io.harness.testframework.framework.utils.ExecutorUtils.addGCVMOptions;
+import static io.harness.testframework.framework.utils.ExecutorUtils.addJacocoAgentVM;
+import static io.harness.testframework.framework.utils.ExecutorUtils.addJarConfig;
 import static io.restassured.config.HttpClientConfig.httpClientConfig;
 import static java.lang.String.format;
 import static java.time.Duration.ofMinutes;
 import static java.time.Duration.ofSeconds;
-import static java.util.Arrays.asList;
 
 import com.google.inject.Singleton;
 
@@ -25,6 +27,7 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
 
 @Singleton
@@ -71,10 +74,18 @@ public class ManagerExecutor {
           logger.info("***");
         }
 
-        final List<String> command = asList("java", "-Xms1024m", "-Xmx4096m", "-XX:+HeapDumpOnOutOfMemoryError",
-            "-XX:+PrintGCDetails", "-XX:+PrintGCDateStamps", "-Xloggc:mygclogfilename.gc", "-XX:+UseParallelGC",
-            "-XX:MaxGCPauseMillis=500", "-Dfile.encoding=UTF-8", "-Xbootclasspath/p:" + alpn, "-jar", jar.toString(),
-            config.toString());
+        List<String> command = new ArrayList<>();
+        command.add("java");
+        command.add("-Xms1024m");
+
+        addGCVMOptions(command);
+
+        command.add("-Dfile.encoding=UTF-8");
+        command.add("-Xbootclasspath/p:" + alpn);
+
+        addJacocoAgentVM(jar, command);
+
+        addJarConfig(jar, config, command);
 
         logger.info(Strings.join(command, " "));
 
